--- a/react-elements/2.1.md
+++ b/react-elements/2.1.md
@@ -1,5 +1,10 @@
 # What is a React element?
 
+The primary type or value that is created when using React is what is known as a React element. A React element is defined as:
 
+ > a light, stateless, immutable, virtual representation of a DOM Element.
 
-### sub 
+React elements are thus, not real DOM elements themselves, but a representation of an actual DOM element. The representation is considered the virtual DOM. In a nutshell React is used to define a virtual DOM that is eventually used to created an actual DOM. 
+
+React elements can be created using JSX or JavaScript. Next we'll look at creating React elements using JavaScript.
+
