--- a/react-elements/2.2.md
+++ b/react-elements/2.2.md
@@ -1,3 +1,44 @@
-# title
+# Creating React elements
+
+In most cases JSX is used to create React elements. Regardless of this fact, we are going to examine how React elements could be created using only JavaScript. The next chapter will discuss creating React elements using JSX.
+
+Creating a React element using JavaScript is as simple as calling the `React.createElement()` function and passing it a set of arguments defining an actual DOM element.  Below I use this function to create a virtual DOM representation of a `<li>` element containing a text node of 'one' and an id of 'li1'.
+
+```
+var reactElementLi = React.createElement('li', {id:'li1'}, 'one');
+```
+
+At this point all I've done is create a React element that I have stored into the variable `reactElementLi`. To create a virtual DOM next we have to actually render the React element to a real DOM. To do this we use the `ReactDOM.render()` function.
+
+```
+ReactDOM.render(reactElementLi,document.getElementById('app'));
+```
+
+The above code, loosely stated, would invoke the following:
+
+1. find the element in an HTML page with an id of `app` 
+2. create a virtual DOM constructed from the React element passed in 
+3. use the virtual DOM to re-construct real DOM branch
+4. inserted real DOM branch into the real DOM as a child element of `<div id="app"></div>`.  
+
+In other words, the HTML DOM would change from this:
+
+```
+<div id="app"></div>
+```
+
+to this:
+
+```
+<div id="app">
+    <li id="li1" data-reactid=".0">one</li>
+</div>
+```
+
+This was a rather simplistic example. Using `React.createElement()` a complex structure can be created as well. For example below I React elements representing an `<ul>`.
+
+
+
+
 
 ### sub 
