--- a/react-elements/2.1.md
+++ b/react-elements/2.1.md
@@ -4,7 +4,7 @@ The primary type or value that is created when using React is what is known as a
 
  > a light, stateless, immutable, virtual representation of a DOM Element.
 
-React elements are thus, not real DOM elements themselves, but a representation of an actual DOM element. The representation is considered the virtual DOM. In a nutshell React is used to define a virtual DOM that is eventually used to created an actual DOM. 
+React elements are thus, not real DOM elements themselves, but a representation of an actual DOM element. The representation is considered the virtual DOM. In a nutshell, React is used to define a virtual DOM using React elements that are eventually used to created an actual DOM structured inside of an HTML page.
 
-React elements can be created using JSX or JavaScript. Next we'll look at creating React elements using JavaScript.
+React elements can be created using JSX or JavaScript. In this chapter we'll  look at creating React elements using JavaScript.
 
