--- a/react-elements/2.2.md
+++ b/react-elements/2.2.md
@@ -1,44 +1,88 @@
 # Creating React elements
 
-In most cases JSX is used to create React elements. Regardless of this fact, we are going to examine how React elements could be created using only JavaScript. The next chapter will discuss creating React elements using JSX.
+In most cases developers using react favor JSX and use it to create React elements. Regardless of this fact, we are going to examine how React elements could be created without JSX using only JavaScript. The next chapter will discuss creating React elements using JSX.
 
-Creating a React element using JavaScript is as simple as calling the `React.createElement()` function and passing it a set of arguments defining an actual DOM element.  Below I use this function to create a virtual DOM representation of a `<li>` element containing a text node of 'one' and an id of 'li1'.
+Creating a React element using JavaScript is as simple as calling the `React.createElement()` function and passing it a set of arguments defining an actual DOM element.  Below I use the `React.createElement()` function to create a virtual DOM representation of a `<li>` element containing a text node of `one` and an `id` of `li1`.
 
-```
+```js
 var reactElementLi = React.createElement('li', {id:'li1'}, 'one');
 ```
 
 At this point all I've done is create a React element that I have stored into the variable `reactElementLi`. To create a virtual DOM next we have to actually render the React element to a real DOM. To do this we use the `ReactDOM.render()` function.
 
-```
-ReactDOM.render(reactElementLi,document.getElementById('app'));
+```js
+ReactDOM.render(reactElementLi, document.getElementById('app'));
 ```
 
 The above code, loosely stated, would invoke the following:
 
 1. find the element in an HTML page with an id of `app` 
 2. create a virtual DOM constructed from the React element passed in 
-3. use the virtual DOM to re-construct real DOM branch
-4. inserted real DOM branch into the real DOM as a child element of `<div id="app"></div>`.  
+3. use the virtual DOM to re-construct a real DOM branch
+4. inserted real DOM branch into the DOM as a child element of `<div id="app"></div>`.  
 
 In other words, the HTML DOM would change from this:
 
-```
+```html
 <div id="app"></div>
 ```
 
 to this:
 
-```
+```html
 <div id="app">
     <li id="li1" data-reactid=".0">one</li>
 </div>
 ```
 
-This was a rather simplistic example. Using `React.createElement()` a complex structure can be created as well. For example below I React elements representing an `<ul>`.
+This was a rather simplistic example. Using `React.createElement()` a complex structure can be created as well. For example, below am using `React.createElement()` to create a bunch of React elements representing an HTML unordered list of text (i.e. `<ul>`).
 
+```js
+// create React element <li>'s
+var rElmLi1 = React.createElement('li', {id:'li1'}, 'one');
+var rElmLi2 = React.createElement('li', {id:'li2'}, 'two');
+var rElmLi3 = React.createElement('li', {id:'li3'}, 'three');
 
+//create <ul> and add child react elements above to it
+var reactElementUl = React.createElement('ul', {className:'myList'}, rElmLi1,rElmLi2,rElmLi3);
+```
 
+Before rendering the unordered list to the DOM I think it is worth showing that the above code can be simplified.
 
+```js
+var reactElementUl = React.createElement(
+  'ul',
+  { className: 'myList' },
+  React.createElement(
+    'li',
+    { id: 'li1' },
+    'one'
+  ),
+  React.createElement(
+    'li',
+    { id: 'li2' },
+    'two'
+  ),
+  React.createElement(
+    'li',
+    { id: 'li3' },
+    'three'
+  )
+);
+```
 
-### sub 
+When the above code is rendered to the DOM the resulting HTML will look like:
+
+```html
+<ul class="myList" data-reactid=".0">
+    <li id="li1" data-reactid=".0.0">one</li>
+    <li id="li2" data-reactid=".0.1">two</li>
+    <li id="li3" data-reactid=".0.2">three</li>
+</ul>
+```
+
+You can investigate this yourself using the jsBin below:
+
+#### Notes
+
+* 
