--- a/react-elements/2.2.md
+++ b/react-elements/2.2.md
@@ -1,14 +1,14 @@
-# Creating React elements
+# Creating React nodes
 
-In most cases developers using react favor JSX and use it to create React elements. Regardless of this fact, we are going to examine how React elements could be created without JSX using only JavaScript. The next chapter will discuss creating React elements using JSX.
+In most cases developers using React favor JSX and use it to create React nodes. Regardless of this fact, we are going to examine how React nodes can be created without JSX, using only JavaScript. The next chapter will discuss creating React nodes using JSX.
 
-Creating a React element using JavaScript is as simple as calling the `React.createElement()` function and passing it a set of arguments defining an actual DOM element.  Below I use the `React.createElement()` function to create a virtual DOM representation of a `<li>` element containing a text node of `one` and an `id` of `li1`.
+Creating React nodes using JavaScript is as simple as calling the `React.createElement()` function and passing it a set of arguments defining an actual DOM node.  Below I use the `React.createElement()` function to create a virtual DOM representation of a `<li>` element node containing a text node of `one` and an `id` of `li1`.
 
 ```js
 var reactElementLi = React.createElement('li', {id:'li1'}, 'one');
 ```
 
-At this point all I've done is create a React element that I have stored into the variable `reactElementLi`. To create a virtual DOM next we have to actually render the React element to a real DOM. To do this we use the `ReactDOM.render()` function.
+At this point all I've done is create a React element node containing a React text node that I have stored into the variable `reactElementLi`. To create a virtual DOM next we have to actually render the React element node to a real DOM. To do this we use the `ReactDOM.render()` function.
 
 ```js
 ReactDOM.render(reactElementLi, document.getElementById('app'));
@@ -17,9 +17,9 @@ ReactDOM.render(reactElementLi, document.getElementById('app'));
 The above code, loosely stated, would invoke the following:
 
 1. find the element in an HTML page with an id of `app` 
-2. create a virtual DOM constructed from the React element passed in 
+2. create a virtual DOM constructed from the React element node passed in 
 3. use the virtual DOM to re-construct a real DOM branch
-4. inserted real DOM branch into the DOM as a child element of `<div id="app"></div>`.  
+4. inserted real DOM branch into the DOM as a child node of `<div id="app"></div>`.  
 
 In other words, the HTML DOM would change from this:
 
@@ -35,7 +35,7 @@ to this:
 </div>
 ```
 
-This was a rather simplistic example. Using `React.createElement()` a complex structure can be created as well. For example, below am using `React.createElement()` to create a bunch of React elements representing an HTML unordered list of text (i.e. `<ul>`).
+This was a rather simplistic example. Using `React.createElement()` a complex structure can be created as well. For example, below am using `React.createElement()` to create a bunch of React nodes representing an HTML unordered list of text (i.e. `<ul>`).
 
 ```js
 // create React element <li>'s
@@ -43,31 +43,20 @@ var rElmLi1 = React.createElement('li', {id:'li1'}, 'one');
 var rElmLi2 = React.createElement('li', {id:'li2'}, 'two');
 var rElmLi3 = React.createElement('li', {id:'li3'}, 'three');
 
-//create <ul> and add child react elements above to it
+//create <ul> React element and add child React <li> elements to it
 var reactElementUl = React.createElement('ul', {className:'myList'}, rElmLi1,rElmLi2,rElmLi3);
 ```
 
-Before rendering the unordered list to the DOM I think it is worth showing that the above code can be simplified.
+Before rendering the unordered list to the DOM I think it is worth showing that the above code can be simplified by using the `React.createElement()` in place of variables. This also demonstrates how a hierarchy or DOM branch can be defined using JavaScript. 
 
 ```js
 var reactElementUl = React.createElement(
-  'ul',
-  { className: 'myList' },
-  React.createElement(
-    'li',
-    { id: 'li1' },
-    'one'
-  ),
-  React.createElement(
-    'li',
-    { id: 'li2' },
-    'two'
-  ),
-  React.createElement(
-    'li',
-    { id: 'li3' },
-    'three'
-  )
+    'ul', {
+        className: 'myList'
+    },
+        React.createElement('li', {id: 'li1'},'one'),
+        React.createElement('li', {id: 'li2'},'two'),
+        React.createElement('li', {id: 'li3'},'three')
 );
 ```
 
@@ -83,6 +72,25 @@ When the above code is rendered to the DOM the resulting HTML will look like:
 
 You can investigate this yourself using the jsBin below:
 
+It should be obvious that React nodes are JavaScript objects that represent real DOM element nodes and text nodes.
+
 #### Notes
 
-* 
+* These are the HTML elements that React supports:
+
+```HTML
+a abbr address area article aside audio b base bdi bdo big blockquote body br
+button canvas caption cite code col colgroup data datalist dd del details dfn
+dialog div dl dt em embed fieldset figcaption figure footer form h1 h2 h3 h4 h5
+h6 head header hgroup hr html i iframe img input ins kbd keygen label legend li
+link main map mark menu menuitem meta meter nav noscript object ol optgroup
+option output p param picture pre progress q rp rt ruby s samp script section
+select small source span strong style sub summary sup table tbody td textarea
+tfoot th thead time title tr track u ul var video wbr
+```
+
+
+
+
+
+
