--- a/react-elements/2.2.md
+++ b/react-elements/2.2.md
@@ -72,7 +72,9 @@ When the above code is rendered to the DOM the resulting HTML will look like:
 
 You can investigate this yourself using the jsBin below:
 
-It should be obvious that React nodes are JavaScript objects that represent real DOM element nodes and text nodes.
+[source code](https://jsfiddle.net/bLy9Lu47/#tabs=result,js,html,resources)
+
+It should be obvious that React nodes are just JavaScript objects that represent real DOM element nodes and text nodes inside of a virtual DOM. The virtual DOM is then used to construct an actual DOM branch in HTML pages.
 
 #### Notes
 
