--- a/react-nodes/2.2.md
+++ b/react-nodes/2.2.md
@@ -70,7 +70,7 @@ When the above code is rendered to the DOM the resulting HTML will look like:
 </ul>
 ```
 
-You can investigate this yourself using the jsBin below:
+You can investigate this yourself using the JSFiddle below:
 
 [source code](https://jsfiddle.net/bLy9Lu47/#tabs=js,result,html,resources)
 
