--- a/react-nodes/2.2.md
+++ b/react-nodes/2.2.md
@@ -1,17 +1,19 @@
 # Creating React nodes
 
-In most cases developers using React favor JSX and use it to create React nodes. Regardless of this fact, we are going to examine how React nodes can be created without JSX, using only JavaScript. The next chapter will discuss creating React nodes using JSX.
+In most cases developers using React will favor JSX and use it to create React nodes. Regardless of this fact in this chapter we are going to examine how React nodes can be created without JSX, using only JavaScript. The next chapter will discuss creating React nodes using JSX.
 
-Creating React nodes using JavaScript is as simple as calling the `React.createElement()` function and passing it a set of arguments defining an actual DOM node.  Below I use the `React.createElement()` function to create a virtual DOM representation of a `<li>` element node containing a text node of `one` and an `id` of `li1`.
+Creating React nodes using JavaScript is as simple as calling the `React.createElement(type,props,children)` function and passing it a set of arguments defining an actual DOM node.  Below I use the `React.createElement()` function to create a virtual DOM representation of a `<li>` element node containing a text node of `one` (aka React text) and an `id` of `li1`. 
 
 ```js
-var reactElementLi = React.createElement('li', {id:'li1'}, 'one');
+var reactNodeLi = React.createElement('li', {id:'li1'}, 'one');
 ```
 
-At this point all I've done is create a React element node containing a React text node that I have stored into the variable `reactElementLi`. To create a virtual DOM next we have to actually render the React element node to a real DOM. To do this we use the `ReactDOM.render()` function.
+Notice that the first argument defines which HTML element I want to represent. The second argument defines the attributes/props on the `<li>`.  And, the third argument defines what the node inside of the element will be. In this case, I am simply place a child text node inside of the `<li>`.
+
+At this point all I've done is create a React element node containing a React text node that I have stored into the variable `reactNodeLi`. To create a virtual DOM next we have to actually render the React element node to a real DOM. To do this we use the `ReactDOM.render()` function.
 
 ```js
-ReactDOM.render(reactElementLi, document.getElementById('app'));
+ReactDOM.render(reactNodeLi, document.getElementById('app'));
 ```
 
 The above code, loosely stated, would invoke the following:
@@ -19,7 +21,7 @@ The above code, loosely stated, would invoke the following:
 1. find the element in an HTML page with an id of `app` 
 2. create a virtual DOM constructed from the React element node passed in 
 3. use the virtual DOM to re-construct a real DOM branch
-4. inserted real DOM branch into the DOM as a child node of `<div id="app"></div>`.  
+4. inserted real DOM branch (i.e. `<li id="li1">one</li>`) into the DOM as a child node of `<div id="app"></div>`.  
 
 In other words, the HTML DOM would change from this:
 
@@ -31,11 +33,12 @@ to this:
 
 ```html
 <div id="app">
+    //note that React added the react data-reactid attribute
     <li id="li1" data-reactid=".0">one</li>
 </div>
 ```
 
-This was a rather simplistic example. Using `React.createElement()` a complex structure can be created as well. For example, below am using `React.createElement()` to create a bunch of React nodes representing an HTML unordered list of text (i.e. `<ul>`).
+This was a rather simplistic example. Using `React.createElement()` a complex structure can be created as well. For example, below I'm using `React.createElement()` to create a bunch of React nodes representing an HTML unordered list of text (i.e. `<ul>`).
 
 ```js
 // create React element <li>'s
@@ -78,7 +81,8 @@ It should be obvious that React nodes are just JavaScript objects that represent
 
 #### Notes
 
-* These are the HTML elements that React supports:
+* The `type` argument passed to `React.createElement(type,props,children)` can be a string indicating a standard HTML element (e.g. `'li'` = `<li>`) or a custom element (e.g. `'foo-bar'` = `<foo-bar></foo-bar>`.
+* These are the standard HTML elements that React supports:
 
 ```HTML
 a abbr address area article aside audio b base bdi bdo big blockquote body br
