--- a/react-nodes/2.2.md
+++ b/react-nodes/2.2.md
@@ -95,7 +95,12 @@ select small source span strong style sub summary sup table tbody td textarea
 tfoot th thead time title tr track u ul var video wbr
 ```
 
+* These are the SVG elements that React supports:
 
+```svg
+circle clipPath defs ellipse g image line linearGradient mask path pattern
+polygon polyline radialGradient rect stop svg text tspan
+```
 
 
 
