--- a/react-nodes/2.3.md
+++ b/react-nodes/2.3.md
@@ -52,3 +52,15 @@ shape size sizes span spellCheck src srcDoc srcLang srcSet start step style
 summary tabIndex target title type useMap value width wmode wrap
 ```
 
+* The following are the SVG attributes that React supports (shown in camel-case):
+
+```svg
+clipPath cx cy d dx dy fill fillOpacity fontFamily
+fontSize fx fy gradientTransform gradientUnits markerEnd
+markerMid markerStart offset opacity patternContentUnits
+patternUnits points preserveAspectRatio r rx ry spreadMethod
+stopColor stopOpacity stroke  strokeDasharray strokeLinecap
+strokeOpacity strokeWidth textAnchor transform version
+viewBox x1 x2 x xlinkActuate xlinkArcrole xlinkHref xlinkRole
+xlinkShow xlinkTitle xlinkType xmlBase xmlLang xmlSpace y1 y2 y
+```
