--- a/react-nodes/2.4.md
+++ b/react-nodes/2.4.md
@@ -25,5 +25,5 @@ a,abbr,address,area,article,aside,audio,b,base,bdi,bdo,big,blockquote,body,br,bu
 #### Notes
 
 * If you are using JSX you have no need for factories
-* You can build your [own custom factories](http://facebook.github.io/react/docs/top-level-api.html#react.createfactory) using `React.createFactory(type)` which is simply produces `React.createElement()` of a given type.
+* You can build your [own custom factories](http://facebook.github.io/react/docs/top-level-api.html#react.createfactory) using `React.createFactory(type)`.
 
