--- a/react-jsx/3.1.md
+++ b/react-jsx/3.1.md
@@ -1,14 +1,69 @@
 # What is JSX?
 
-In the previous chapter we learned 
+JSX is an XML-like syntax that extends ECMAScript so that HTML-like text can co-exist with JavaScrip code. The syntax is intended to be used by preprocessors (i.e. transpilers like Babel) to transform HTML-like text found in JavaScript files into standard JavaScript that a JavaScript engine will parse.
 
-The primary type or value that is created when using React is what is known as a React node. A React node is defined as:
+Basically, by using JSX you can write concise HTML structures (DOM like tree structures) in the same file as you write JavaScript and Babel will transform these expressions into actual JavaScript code. 
 
- > a light, stateless, immutable, virtual representation of a DOM node.
+By using JSX one can write this in JavaScript:
 
-React nods are thus, not [real DOM nodes](http://domenlightenment.com/#1) (e.g. [text](http://domenlightenment.com/#7) or [element](http://domenlightenment.com/#3) nodes) themselves, but a representation of a potential DOM node. The representation is considered the virtual DOM. In a nutshell, React is used to define a virtual DOM using React nodes that are eventually used to create a real DOM structured, using real DOM nodes, inside of an HTML page.
+```
+<ul id="nav">
+   <li><a href="#">Home</a></li>
+   <li><a href="#">About</a></li>
+   <li><a href="#">Clients</a></li>
+   <li><a href="#">Contact Us</a></li>
+</ul>
+```
 
-React nodes can be created using JSX or JavaScript. In this chapter we'll  look at creating React nodes using JavaScript.
+Instead of this (but this is exactly what Babel produces):
 
-You might be tempted to skip this chapter because you already know that you will be using JSX. I'd suggest reading this chapter so you are aware of what JSX is doing for you.
+```
+React.createElement(
+   "ul",
+   { id: "nav" },
+   React.createElement(
+      "li",
+      null,
+      React.createElement(
+         "a",
+         { href: "#" },
+         "Home"
+      )
+   ),
+   React.createElement(
+      "li",
+      null,
+      React.createElement(
+         "a",
+         { href: "#" },
+         "About"
+      )
+   ),
+   React.createElement(
+      "li",
+      null,
+      React.createElement(
+         "a",
+         { href: "#" },
+         "Clients"
+      )
+   ),
+   React.createElement(
+      "li",
+      null,
+      React.createElement(
+         "a",
+         { href: "#" },
+         "Contact Us"
+      )
+   )
+);
+```
+
+
+The idea of mixing HTML and JavaScript in the same file can be a rather contentious topic. Ignore the debate. Use it if you find it helpful. If not, write the React code required to create React nodes. Your choice. My opinion is that JSX provides a concise and familiar syntax for defining a tree structure with attributes that does not require learning a templating language or leaving JavaScript. Both of which are can be a win when building large applications.
+
+
+
+
 
