--- a/react-nodes/2.4.md
+++ b/react-nodes/2.4.md
@@ -1,4 +1,4 @@
-# Using node element factories
+# Using React node element factories
 
 React provides built-in shortcuts for creating commonly used element nodes. These shortcuts are called React element factories. 
 
