--- a/react-jsx/3.1.md
+++ b/react-jsx/3.1.md
@@ -1,23 +1,25 @@
 # What is JSX?
 
-JSX is an XML-like syntax that extends ECMAScript so that HTML-like text can co-exist with JavaScrip code. The syntax is intended to be used by preprocessors (i.e. transpilers like Babel) to transform HTML-like text found in JavaScript files into standard JavaScript that a JavaScript engine will parse.
+JSX is an XML-like syntax that extends ECMAScript so that HTML-like text can co-exist with JavaScript code. The syntax is intended to be used by preprocessors (i.e. transpilers like Babel) to transform HTML-like text found in JavaScript files into standard JavaScript that a JavaScript engine will parse.
 
 Basically, by using JSX you can write concise HTML structures (DOM like tree structures) in the same file as you write JavaScript and Babel will transform these expressions into actual JavaScript code. 
 
 By using JSX one can write this in JavaScript:
 
-```
-<ul id="nav">
-   <li><a href="#">Home</a></li>
-   <li><a href="#">About</a></li>
-   <li><a href="#">Clients</a></li>
-   <li><a href="#">Contact Us</a></li>
-</ul>
+```js
+return ( 
+   <ul id="nav">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Clients</a></li>
+      <li><a href="#">Contact Us</a></li>
+   </ul>
+);
 ```
 
 Instead of this (but this is exactly what Babel produces):
 
-```
+```js
 React.createElement(
    "ul",
    { id: "nav" },
