--- a/react-jsx/3.1.md
+++ b/react-jsx/3.1.md
@@ -1,69 +1,92 @@
 # What is JSX?
 
-JSX is an XML-like syntax that extends ECMAScript so that HTML-like text can co-exist with JavaScript code. The syntax is intended to be used by preprocessors (i.e. transpilers like Babel) to transform HTML-like text found in JavaScript files into standard JavaScript that a JavaScript engine will parse.
+JSX is an XML-like syntax used by React that extends ECMAScript so that HTML-like text can co-exist with JavaScript/React code. The syntax is intended to be used by preprocessors (i.e. transpilers like Babel) to transform HTML-like text found in JavaScript files into standard JavaScript objects that a JavaScript engine will parse.
 
-Basically, by using JSX you can write concise HTML structures (DOM like tree structures) in the same file as you write JavaScript and Babel will transform these expressions into actual JavaScript code. 
+Basically, by using JSX you can write concise HTML structures (DOM like tree structures) in the same file as you write JavaScript code, then Babel will transform these expressions into actual JavaScript code.
 
-By using JSX one can write this in JavaScript:
-
-```js
-return ( 
-   <ul id="nav">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Clients</a></li>
-      <li><a href="#">Contact Us</a></li>
-   </ul>
-);
-```
-
-Instead of this (but this is exactly what Babel produces):
+By using JSX one can write the following React JavaScript code:
 
 ```js
-React.createElement(
-   "ul",
-   { id: "nav" },
-   React.createElement(
-      "li",
-      null,
-      React.createElement(
-         "a",
-         { href: "#" },
-         "Home"
-      )
-   ),
-   React.createElement(
-      "li",
-      null,
-      React.createElement(
-         "a",
-         { href: "#" },
-         "About"
-      )
-   ),
-   React.createElement(
-      "li",
-      null,
-      React.createElement(
-         "a",
-         { href: "#" },
-         "Clients"
-      )
-   ),
-   React.createElement(
-      "li",
-      null,
-      React.createElement(
-         "a",
-         { href: "#" },
-         "Contact Us"
-      )
-   )
-);
+var Nav = React.createClass({ //define MySelect component
+    render: function(){
+      return ( 
+         <ul id="nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Clients</a></li>
+            <li><a href="#">Contact Us</a></li>
+         </ul>
+      );
+    }
+});
 ```
 
+And Babel will transform it into this:
+
+```js
+var Nav = React.createClass({
+   displayName: "Nav",
+   //define MySelect component
+   render: function render() {
+      return React.createElement(
+         "ul",
+         { id: "nav" },
+         React.createElement(
+            "li",
+            null,
+            React.createElement(
+               "a",
+               { href: "#" },
+               "Home"
+            )
+         ),
+         React.createElement(
+            "li",
+            null,
+            React.createElement(
+               "a",
+               { href: "#" },
+               "About"
+            )
+         ),
+         React.createElement(
+            "li",
+            null,
+            React.createElement(
+               "a",
+               { href: "#" },
+               "Clients"
+            )
+         ),
+         React.createElement(
+            "li",
+            null,
+            React.createElement(
+               "a",
+               { href: "#" },
+               "Contact Us"
+            )
+         )
+      );
+   }
+});
+```
+
+You can think of JSX as a shorthand for calling `React.createElement()`.
 
 The idea of mixing HTML and JavaScript in the same file can be a rather contentious topic. Ignore the debate. Use it if you find it helpful. If not, write the React code required to create React nodes. Your choice. My opinion is that JSX provides a concise and familiar syntax for defining a tree structure with attributes that does not require learning a templating language or leaving JavaScript. Both of which are can be a win when building large applications.
+
+#### Notes
+
+* It should be obvious but JSX is easier to read and write over large pyramids of JavaScript function calls or object literals. Additionally the React team clearly believes that, "markup and the code that generates it are intimately tied together. Additionally, display logic is often very complex and using template languages to express it becomes cumbersome. We've found that the best solution for this problem is to generate HTML and component trees directly from the JavaScript code such that you can use all of the expressive power of a real programming language to build UIs. We've found that the best solution for this problem is to generate HTML and component trees directly from the JavaScript code such that you can use all of the expressive power of a real programming language to build UIs."
+* The Babel tool is a [subjective selection](https://facebook.github.io/react/blog/2015/09/10/react-v0.14-rc1.html#compiler-optimizations) from the React team for transforming ES* code and JSX syntax to ES5 code. Learn more about Babel by reading the [Babel handbook](https://github.com/thejameskyle/babel-handbook/blob/master/translations/en/user-handbook.md) by the React team for transforming JSX to JavaScript.
+* By using JSX:
+    * Less technical people can still understand and modify the required parts. CSS developers and designers will find JSX more familiar than JavaScript alone.
+    * You can leverage the full power of JavaScript in HTML and avoid learning or using a templating language. JSX is not a templating solution. It is a declarative syntax used to express a tree structure of UI components.
+    * The compiler will find errors in your HTML you might otherwise miss.
+    * JSX promotes the idea of inline styles. Which can be a good thing.
+* Beware of JSX [Gotchas](http://facebook.github.io/react/docs/jsx-gotchas.html).
+* A [JSX specification is currently being drafted](https://facebook.github.io/jsx/) to by used by anyone as an a XML-like syntax extension to ECMAScript without any defined semantics.
 
 
 
