--- a/react-jsx/3.2.md
+++ b/react-jsx/3.2.md
@@ -1,10 +1,42 @@
-# Creating HTML React nodes with JSX
+# Creating React nodes with JSX
 
+Working off the knowledge given in the previous chapter you should be familiar with creating React nodes using the `React.createElement()` function. For example, using this function one can create React nodes that are both HTML DOM nodes and custom HTML DOM nodes. Below I use this familiar function to create two React nodes. 
 
+```js
+//React node, which represents an actual HTML DOM node
+var HTMLLi = React.createElement('li', {className:'bar'}, 'foo');
+
+//React node, which represents a custom HTML DOM node
+var HTMLCustom = React.createElement('foo', {className:'bar'}, 'foo');
+```
+
+To use JSX instead of `React.createElement()` to create these React nodes one just has to replace `React.createElement()` function calls with the HTML/XML like tags which represent the HTML you'd like the virtual DOM to spit out. The above code can be written with JSX like so.
+
+```js
+//React node, which represents an actual HTML DOM node
+var HTMLLi = <li className="bar">foo</li>;
+
+//React node, which represents a custom HTML DOM node
+var HTMLCustom = <foo className="bar" >foo</foo>;
+```
+
+Notice that the JSX is not in a string format and can just be writing as if you are writing it inside of an `.html` file. As stated many times already JSX is then transformed back into the `React.createElement()` functions calls by Babel. You can see the transformation occurring in the following JSFiddle.
+
+[source code](https://jsfiddle.net/wc6dtkov/#tabs=js,result,html,resources)
+
+If you were to examine the actual HTML produced in the above JSfiddle it would look like so:
+
+```html
+<body>
+    <div id="app1"><li class="bar" data-reactid=".0">foo</li></div>
+
+    <div id="app2"><foo class="bar" data-reactid=".1">foo</foo></div>
+</body>
+```
 
 #### Notes
 
-* JSX tags support the XML self close syntax so you can optionally leave the closing tag off.
+* JSX tags support the XML self close syntax so you can optionally leave the closing tag off when no child node is used.
 
 
 
