--- a/react-nodes/2.1.md
+++ b/react-nodes/2.1.md
@@ -4,7 +4,7 @@ The primary type or value that is created when using React is what is known as a
 
  > a light, stateless, immutable, virtual representation of a DOM node.
 
-React nods are thus, not [real DOM nodes](http://domenlightenment.com/#1) (e.g. [text](http://domenlightenment.com/#7) or [element](http://domenlightenment.com/#3) nodes) themselves, but a representation of a potential DOM node. The representation is considered the virtual DOM. In a nutshell, React is used to define a virtual DOM using React nodes that are eventually used to create a real DOM structured, using real DOM nodes, inside of an HTML page.
+React nodes are thus, not [real DOM nodes](http://domenlightenment.com/#1) (e.g. [text](http://domenlightenment.com/#7) or [element](http://domenlightenment.com/#3) nodes) themselves, but a representation of a potential DOM node. The representation is considered the virtual DOM. In a nutshell, React is used to define a virtual DOM using React nodes that are eventually used to create a real DOM structured, using real DOM nodes, inside of an HTML page.
 
 React nodes can be created using JSX or JavaScript. In this chapter we'll  look at creating React nodes using JavaScript.
 
