--- a/react-nodes/2.2.md
+++ b/react-nodes/2.2.md
@@ -2,7 +2,9 @@
 
 In most cases developers using React will favor JSX and use it to create React nodes. Regardless of this fact in this chapter we are going to examine how React nodes can be created without JSX, using only JavaScript. The next chapter will discuss creating React nodes using JSX.
 
-Creating React nodes using JavaScript is as simple as calling the `React.createElement(type,props,children)` function and passing it a set of arguments defining an actual DOM node.  Below I use the `React.createElement()` function to create a virtual DOM representation of a `<li>` element node containing a text node of `one` (aka React text) and an `id` of `li1`. 
+Creating React nodes using JavaScript is as simple as calling the `React.createElement(type,props,children)` function and passing it a set of arguments defining an actual DOM node (i.e. an html element e.g. `<li>` or custom element e.g. `<my-li>`).  
+
+Below I use the `React.createElement()` function to create a virtual DOM representation of a `<li>` element node containing a text node of `one` (aka React text) and an `id` of `li1`. 
 
 ```js
 var reactNodeLi = React.createElement('li', {id:'li1'}, 'one');
@@ -81,7 +83,7 @@ It should be obvious that React nodes are just JavaScript objects that represent
 
 #### Notes
 
-* The `type` argument passed to `React.createElement(type,props,children)` can be a string indicating a standard HTML element (e.g. `'li'` = `<li>`) or a custom element (e.g. `'foo-bar'` = `<foo-bar></foo-bar>`.
+* The `type` argument passed to `React.createElement(type,props,children)` can be a string indicating a standard HTML element (e.g. `'li'` = `<li></li>`) or a custom element (e.g. `'foo-bar'` = `<foo-bar></foo-bar>`.
 * These are the standard HTML elements that React supports:
 
 ```HTML
