--- a/react-jsx/3.2.md
+++ b/react-jsx/3.2.md
@@ -7,7 +7,7 @@ Working off the knowledge given in the previous chapter you should be familiar w
 var HTMLLi = React.createElement('li', {className:'bar'}, 'foo');
 
 //React node, which represents a custom HTML DOM node
-var HTMLCustom = React.createElement('foo', {className:'bar'}, 'foo');
+var HTMLCustom = React.createElement('foo-bar', {className:'bar'}, 'foo');
 ```
 
 To use JSX instead of `React.createElement()` to create these React nodes one just has to replace `React.createElement()` function calls with the HTML/XML like tags which represent the HTML you'd like the virtual DOM to spit out. The above code can be written with JSX like so.
@@ -17,7 +17,7 @@ To use JSX instead of `React.createElement()` to create these React nodes one ju
 var HTMLLi = <li className="bar">foo</li>;
 
 //React node, which represents a custom HTML DOM node
-var HTMLCustom = <foo className="bar" >foo</foo>;
+var HTMLCustom = <foo-bar className="bar" >foo</foo-bar>;
 ```
 
 Notice that the JSX is not in a string format and can just be writing as if you are writing it inside of an `.html` file. As stated many times already JSX is then transformed back into the `React.createElement()` functions calls by Babel. You can see the transformation occurring in the following JSFiddle.
@@ -30,13 +30,34 @@ If you were to examine the actual HTML produced in the above JSfiddle it would l
 <body>
     <div id="app1"><li class="bar" data-reactid=".0">foo</li></div>
 
-    <div id="app2"><foo class="bar" data-reactid=".1">foo</foo></div>
+    <div id="app2"><foo-bar class="bar" data-reactid=".1">foo</foo-bar></div>
 </body>
 ```
 
 #### Notes
 
 * JSX tags support the XML self close syntax so you can optionally leave the closing tag off when no child node is used.
+* If you pass props/attributes to native HTML elements that do not exist in the HTML specification, React will not render them to the actual DOM. However, if you use a custom element (i.e. not a stand HTML element) then arbitrary/custom attributes will be added to custom elements (e.g. `<x-my-component custom-attribute="foo" />`).
+* The `class` attribute has to be written `className`
+* The `for` attribute has to be written `htmlFor`
+* The `style` attribute takes an object of [camel-cased style properties](https://www.w3.org/TR/DOM-Level-2-Style/css.html#CSS-CSS2Properties)
+* All attributes are camel-cased (e.g. `accept-charset` is written as `acceptCharset`)
+* The following are the HTML attributes that React supports (shown in camel-case):
+
+```HTML
+accept acceptCharset accessKey action allowFullScreen allowTransparency alt
+async autoComplete autoFocus autoPlay capture cellPadding cellSpacing challenge
+charSet checked classID className colSpan cols content contentEditable
+contextMenu controls coords crossOrigin data dateTime default defer dir
+disabled download draggable encType form formAction formEncType formMethod
+formNoValidate formTarget frameBorder headers height hidden high href hrefLang
+htmlFor httpEquiv icon id inputMode integrity is keyParams keyType kind label
+lang list loop low manifest marginHeight marginWidth max maxLength media
+mediaGroup method min minLength multiple muted name noValidate nonce open
+optimum pattern placeholder poster preload radioGroup readOnly rel required
+reversed role rowSpan rows sandbox scope scoped scrolling seamless selected
+shape size sizes span spellCheck src srcDoc srcLang srcSet start step style
+summary tabIndex target title type useMap value width wmode wrap
 
 
 
