--- a/react-nodes/2.3.md
+++ b/react-nodes/2.3.md
@@ -29,11 +29,11 @@ The `foo` attribute/prop does not show up in the real DOM. This non-standard HTM
 
 #### Notes
 
-* All attributes are camel-cased (e.g. `accept-charset` is written as `acceptCharset`)
-* Remember, If you pass properties to native HTML elements that do not exist in the HTML specification, React will not render them. However, if you use a custom element (i.e. not a stand HTML element) then arbitrary/custom attributes will be added to custom elements (e.g. `<x-my-component custom-attribute="foo" />`).
+* If you pass props/attributes to native HTML elements that do not exist in the HTML specification, React will not render them. However, if you use a custom element (i.e. not a stand HTML element) then arbitrary/custom attributes will be added to custom elements (e.g. `<x-my-component custom-attribute="foo" />`).
 * The `class` attribute has to be written `className`
 * The `for` attribute has to be written `htmlFor`
 * The `style` attribute takes an object of [camel-cased style properties](https://www.w3.org/TR/DOM-Level-2-Style/css.html#CSS-CSS2Properties)
+* All attributes are camel-cased (e.g. `accept-charset` is written as `acceptCharset`)
 * The following are the HTML attributes that React supports (shown in camel-case):
 
 ```HTML
