--- a/react-jsx/3.2.md
+++ b/react-jsx/3.2.md
@@ -10,7 +10,7 @@ var HTMLLi = React.createElement('li', {className:'bar'}, 'foo');
 var HTMLCustom = React.createElement('foo-bar', {className:'bar'}, 'foo');
 ```
 
-To use JSX instead of `React.createElement()` to create these React nodes one just has to replace `React.createElement()` function calls with the HTML/XML like tags which represent the HTML you'd like the virtual DOM to spit out. The above code can be written with JSX like so.
+To use JSX instead of `React.createElement()` to create these React nodes one just has to replace `React.createElement()` function calls with the HTML/XML like tags which represent the HTML you'd like the virtual DOM to spit out. The above code can be written in JSX like so.
 
 ```js
 //React node, which represents an actual HTML DOM node
@@ -29,7 +29,6 @@ If you were to examine the actual HTML produced in the above JSfiddle it would l
 ```html
 <body>
     <div id="app1"><li class="bar" data-reactid=".0">foo</li></div>
-
     <div id="app2"><foo-bar class="bar" data-reactid=".1">foo</foo-bar></div>
 </body>
 ```
@@ -58,7 +57,7 @@ optimum pattern placeholder poster preload radioGroup readOnly rel required
 reversed role rowSpan rows sandbox scope scoped scrolling seamless selected
 shape size sizes span spellCheck src srcDoc srcLang srcSet start step style
 summary tabIndex target title type useMap value width wmode wrap
-
+```
 
 
 
