--- a/react-basic-setup/1.3.md
+++ b/react-basic-setup/1.3.md
@@ -1,6 +1,6 @@
 ## Using ES6 & ES\* with React
 
-Babel is not part of React. In fact, Babel's purpose isn't even that of a JSX transformer. Babel is a JavaScript compiler first.  It takes ES\* code and transforms it to run in browsers that don't support ES\* code. As of today, Babel mostly takes ES6 and ES7 code and transforms it into ES5 code. When doing these ECMAScript transformations it is trivial to also transform JSX expressions into `createElement` calls. This is what we examined in the previous section.
+Babel is not part of React. In fact, Babel's purpose isn't even that of a JSX transformer. Babel is a JavaScript compiler first.  It takes ES\* code and transforms it to run in browsers that don't support ES\* code. As of today, Babel mostly takes ES6 and ES7 code and transforms it into ES5 code. When doing these ECMAScript transformations it is trivial to also transform JSX expressions into `React.createElement()` calls. This is what we examined in the previous section.
 
 Given that Babel is the mechanism for transforming JSX, it additionally allows a developer to write future ES\* code.
 
