--- a/react-jsx/3.1.md
+++ b/react-jsx/3.1.md
@@ -1,6 +1,6 @@
 # What is JSX?
 
-JSX is an XML-like syntax used by React that extends ECMAScript so that HTML-like text can co-exist with JavaScript/React code. The syntax is intended to be used by preprocessors (i.e. transpilers like Babel) to transform HTML-like text found in JavaScript files into standard JavaScript objects that a JavaScript engine will parse.
+JSX is an XML/HTML-like syntax used by React that extends ECMAScript so that XML/HTML-like text can co-exist with JavaScript/React code. The syntax is intended to be used by preprocessors (i.e. transpilers like Babel) to transform HTML-like text found in JavaScript files into standard JavaScript objects that a JavaScript engine will parse.
 
 Basically, by using JSX you can write concise HTML structures (DOM like tree structures) in the same file as you write JavaScript code, then Babel will transform these expressions into actual JavaScript code.
 
@@ -86,7 +86,8 @@ The idea of mixing HTML and JavaScript in the same file can be a rather contenti
     * The compiler will find errors in your HTML you might otherwise miss.
     * JSX promotes the idea of inline styles. Which can be a good thing.
 * Beware of JSX [Gotchas](http://facebook.github.io/react/docs/jsx-gotchas.html).
-* A [JSX specification is currently being drafted](https://facebook.github.io/jsx/) to by used by anyone as an a XML-like syntax extension to ECMAScript without any defined semantics.
+* A [JSX specification is currently being drafted](https://facebook.github.io/jsx/) to by used by anyone as an a XML-like syntax extension to ECMAScript without any defined semantics. It is a separate thing from React itself.
+* JSX does not attempt to comply with any XML or HTML specification. JSX is designed as an ECMAScript feature and the similarity to XML/HTML is only at the surface (i.e. it looks like XML/HTML so you can just write something familiar)
 
 
 
